--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,53 @@
-# http://www.gnu.org/software/automake
+# Build e publicação
+bin/
+obj/
+out/
+publish/
+publicado/
 
-Makefile.in
-/ar-lib
-/mdate-sh
-/py-compile
-/test-driver
-/ylwrap
-.deps/
-.dirstamp
+# Capturas e logs
+*.png
+*.jpg
+*.jpeg
+*.bmp
+*.gif
+*.tif
+*.tiff
+*.ico
+*.log
+*.tmp
+*.bak
+*.old
+Capturas/
+C:\Capturas/
 
-# http://www.gnu.org/software/autoconf
+# Configurações locais do Visual Studio/VS Code
+.vscode/
+.vs/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
 
-autom4te.cache
-/autoscan.log
-/autoscan-*.log
-/aclocal.m4
-/compile
-/config.cache
-/config.guess
-/config.h.in
-/config.log
-/config.status
-/config.sub
-/configure
-/configure.scan
-/depcomp
-/install-sh
-/missing
-/stamp-h1
+# Pacotes
+packages/
+*.nupkg
+*.snupkg
 
-# https://www.gnu.org/software/libtool/
+# Arquivos temporários
+*.DS_Store
+*.Thumbs.db
 
-/ltmain.sh
+# Sistema operacional
+ehthumbs.db
+Icon?
+desktop.ini
 
-# http://www.gnu.org/software/texinfo
+# Rider / JetBrains
+.idea/
 
-/texinfo.tex
+# Logs gerados
+erros.txt
 
-# http://www.gnu.org/software/m4/
-
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
-
-# Generated Makefile
-# (meta build system like autotools,
-# can automatically generate from config.status script
-# (which is called by configure script))
-Makefile
+# Diretórios de publicação
+release/
