--- a/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/Jcf.WhereToPark.Api.csproj
+++ b/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/Jcf.WhereToPark.Api.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.3.efcore.9.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.2" />
+  </ItemGroup>
+
 </Project>
