configurando conexão de banco nos appsettings

--- a/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/appsettings.Development.json
+++ b/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "EnvironmentName": "DEV",
+    "ConnectionStrings": {
+        "DefaultConnection": "server=localhost;user=userappwheretopark;password=wheretopark@123;database=db_where_to_park_dev"
     }
-  },
-  "EnvironmentName": "DEV"
 }
