AJustando config de banco

--- a/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/appsettings.Development.json
+++ b/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "EnvironmentName": "DEV",
-    "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;user=userappwheretopark;password=wheretopark@123;database=db_where_to_park_dev"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=userappwheretopark;password=WhereToPark@123;database=db_where_to_park_dev"
+  }
 }
