--- a/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/appsettings.json
+++ b/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/appsettings.json
@@ -7,9 +7,9 @@
     },
     "AllowedHosts": "*",
     "EnvironmentName": "PRD",
-    "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;user=userappwheretopark;password=wheretopark@123;database=db_where_to_park_prd"
-    },    
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=userappwheretopark;password=WhereToPark@123;database=db_where_to_park_prd"
+  },    
     "Authentication": {
         "Jwt": {
             "Issuer": "App.Where.To.Park",
