--- a/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/Jcf.WhereToPark.Api.csproj
+++ b/Jcf.WhereToPark/src/Jcf.WhereToPark.Api/Jcf.WhereToPark.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
 	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.3.efcore.9.0.0" />
